[gd_scene load_steps=79 format=3 uid="uid://07tucox5xoja"]

[ext_resource type="Material" uid="uid://q5v4nq6ax8pa" path="res://material/player.tres" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://cx58hqulaicl7" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://bmet0v46e2uqj" path="res://anim/idle/tile000.png" id="3_giy8y"]
[ext_resource type="Texture2D" uid="uid://dw2dwuwysn6qy" path="res://anim/idle/tile001.png" id="4_fdfoy"]
[ext_resource type="Texture2D" uid="uid://be0otbbnpo1lw" path="res://anim/idle/tile002.png" id="5_hhpqf"]
[ext_resource type="Texture2D" uid="uid://dahlwpb5dqc03" path="res://anim/idle/tile003.png" id="6_g5jhy"]
[ext_resource type="Texture2D" uid="uid://56hjtqdtbgog" path="res://anim/idle/tile004.png" id="7_holxr"]
[ext_resource type="Texture2D" uid="uid://f1eipa4e7jqc" path="res://anim/idle/tile005.png" id="8_mx1m4"]
[ext_resource type="Texture2D" uid="uid://b6aocmlc5ubdj" path="res://anim/idle/tile006.png" id="9_4gjji"]
[ext_resource type="Texture2D" uid="uid://2t0ah57n82he" path="res://anim/idle/tile007.png" id="10_u2ulf"]
[ext_resource type="Texture2D" uid="uid://dlgp6baic2m8a" path="res://anim/idle/tile008.png" id="11_6e8lb"]
[ext_resource type="Texture2D" uid="uid://daalw5cex5fpd" path="res://anim/idle/tile009.png" id="12_2gdjj"]
[ext_resource type="Texture2D" uid="uid://b7njr707lodpi" path="res://anim/idle/tile010.png" id="13_sc3ue"]
[ext_resource type="Texture2D" uid="uid://bbi2g0ylidwro" path="res://anim/idle/tile011.png" id="14_lxlsd"]
[ext_resource type="Texture2D" uid="uid://5xmlb5ov308r" path="res://anim/idle/tile012.png" id="15_ha2mi"]
[ext_resource type="Texture2D" uid="uid://dkvwsxt2x1ubw" path="res://anim/idle/tile013.png" id="16_apa73"]
[ext_resource type="Texture2D" uid="uid://tn1gque3e4rx" path="res://anim/idle/tile014.png" id="17_74r1k"]
[ext_resource type="Texture2D" uid="uid://beo2325b2oyqc" path="res://anim/idle/tile015.png" id="18_8svfe"]
[ext_resource type="Texture2D" uid="uid://b10jxordblewt" path="res://anim/idle/tile016.png" id="19_2a3c5"]
[ext_resource type="Texture2D" uid="uid://byybht46fdjxo" path="res://anim/idle/tile017.png" id="20_42b1b"]
[ext_resource type="Texture2D" uid="uid://bd6gv67jxapnb" path="res://anim/idle/tile018.png" id="21_h7ic4"]
[ext_resource type="Texture2D" uid="uid://cl6ki1nwphptt" path="res://anim/idle/tile019.png" id="22_au7lq"]
[ext_resource type="Texture2D" uid="uid://cqct0a4w2v8hu" path="res://anim/idle/tile020.png" id="23_nubpm"]
[ext_resource type="Texture2D" uid="uid://cd40hgq0dldqs" path="res://anim/idle/tile021.png" id="24_ua5cf"]
[ext_resource type="Texture2D" uid="uid://c7hjk880pllyn" path="res://anim/idle/tile022.png" id="25_51ujp"]
[ext_resource type="Texture2D" uid="uid://drbnco5ubfk3a" path="res://anim/idle/tile023.png" id="26_tk41t"]
[ext_resource type="Texture2D" uid="uid://bfsdryt6j6p2u" path="res://anim/idle/tile024.png" id="27_fuw3a"]
[ext_resource type="Texture2D" uid="uid://caos3qk40reqs" path="res://anim/idle/tile025.png" id="28_8txt3"]
[ext_resource type="Texture2D" uid="uid://dwrhgfu02o06w" path="res://anim/idle/tile026.png" id="29_2w11d"]
[ext_resource type="Texture2D" uid="uid://c1tsnftn6mywg" path="res://anim/idle/tile027.png" id="30_770dr"]
[ext_resource type="Texture2D" uid="uid://b4o3rmhvv03mj" path="res://anim/idle/tile028.png" id="31_8f1cb"]
[ext_resource type="Texture2D" uid="uid://dpgv6624oguqv" path="res://anim/idle/tile029.png" id="32_vdulj"]
[ext_resource type="Texture2D" uid="uid://bq8kueluqk7y5" path="res://anim/idle/tile030.png" id="33_vau08"]
[ext_resource type="Texture2D" uid="uid://54ftu167oc26" path="res://anim/idle/tile031.png" id="34_qsb7e"]
[ext_resource type="Texture2D" uid="uid://ckvonwtp1vwjc" path="res://anim/idle/tile032.png" id="35_qjsmb"]
[ext_resource type="Texture2D" uid="uid://dg4eo45dccxir" path="res://anim/idle/tile033.png" id="36_mwp2n"]
[ext_resource type="Texture2D" uid="uid://bg4x61c5flyvm" path="res://anim/idle/tile034.png" id="37_0yhus"]
[ext_resource type="Texture2D" uid="uid://c6qnmj5sq28ks" path="res://anim/idle/tile035.png" id="38_jlll7"]
[ext_resource type="Texture2D" uid="uid://d1krkr4qxf51q" path="res://anim/idle/tile036.png" id="39_qk6i7"]
[ext_resource type="Texture2D" uid="uid://n8bxvcpbnl58" path="res://anim/idle/tile037.png" id="40_6c3st"]
[ext_resource type="Texture2D" uid="uid://h7rvy2iiddyf" path="res://anim/idle/tile038.png" id="41_1da1t"]
[ext_resource type="Texture2D" uid="uid://jidkfxilx2rh" path="res://anim/idle/tile039.png" id="42_p21yu"]
[ext_resource type="Texture2D" uid="uid://de4qadw6crqha" path="res://anim/run/tile000.png" id="43_sc3ue"]
[ext_resource type="Texture2D" uid="uid://cr221eo30vqmv" path="res://anim/run/tile001.png" id="44_lxlsd"]
[ext_resource type="Texture2D" uid="uid://d1dfx8dyphe4w" path="res://anim/run/tile002.png" id="45_ha2mi"]
[ext_resource type="Texture2D" uid="uid://mldcl3biiqib" path="res://anim/run/tile003.png" id="46_apa73"]
[ext_resource type="Texture2D" uid="uid://qycmyfmsfwat" path="res://anim/run/tile004.png" id="47_74r1k"]
[ext_resource type="Texture2D" uid="uid://dtdjhkshmf22v" path="res://anim/run/tile005.png" id="48_8svfe"]
[ext_resource type="Texture2D" uid="uid://bl5dm1k4xoqo3" path="res://anim/run/tile006.png" id="49_2a3c5"]
[ext_resource type="Texture2D" uid="uid://dxvrnuokubnly" path="res://anim/run/tile007.png" id="50_42b1b"]
[ext_resource type="Texture2D" uid="uid://tu5raf7o731b" path="res://anim/run/tile008.png" id="51_h7ic4"]
[ext_resource type="Texture2D" uid="uid://bdvkvsijayheh" path="res://anim/run/tile024.png" id="51_qjsmb"]
[ext_resource type="Texture2D" uid="uid://fhaderu6754j" path="res://anim/run/tile009.png" id="52_au7lq"]
[ext_resource type="Texture2D" uid="uid://bx3qsklccxayo" path="res://anim/run/tile025.png" id="52_mwp2n"]
[ext_resource type="Texture2D" uid="uid://xyfarml0egp8" path="res://anim/run/tile026.png" id="53_0yhus"]
[ext_resource type="Texture2D" uid="uid://ckvltsyetg1gn" path="res://anim/run/tile027.png" id="54_jlll7"]
[ext_resource type="Texture2D" uid="uid://dwdjvdtphs48i" path="res://anim/run/tile028.png" id="55_qk6i7"]
[ext_resource type="Texture2D" uid="uid://dv382v7j0bk2w" path="res://anim/run/tile029.png" id="56_6c3st"]
[ext_resource type="Texture2D" uid="uid://boqbew6x3nk8t" path="res://anim/run/tile030.png" id="57_1da1t"]
[ext_resource type="Texture2D" uid="uid://dccbwohpdmhbf" path="res://anim/run/tile031.png" id="58_p21yu"]
[ext_resource type="Texture2D" uid="uid://damncar5egb3l" path="res://anim/run/tile010.png" id="61_irpag"]
[ext_resource type="Texture2D" uid="uid://c7lujy2k56dlk" path="res://anim/run/tile011.png" id="62_bpsgo"]
[ext_resource type="Texture2D" uid="uid://cus0dx28l03h4" path="res://anim/run/tile012.png" id="63_jx8is"]
[ext_resource type="Texture2D" uid="uid://dwbrqjw8egpc5" path="res://anim/run/tile013.png" id="64_vx63k"]
[ext_resource type="Texture2D" uid="uid://4nqbq7mornyh" path="res://anim/run/tile014.png" id="65_lw0jh"]
[ext_resource type="Texture2D" uid="uid://bvd3d06paqngn" path="res://anim/run/tile015.png" id="66_ry8ed"]
[ext_resource type="Texture2D" uid="uid://dlvygbqlncimn" path="res://anim/run/tile016.png" id="67_au8ao"]
[ext_resource type="Texture2D" uid="uid://dnqhvh85qcwwy" path="res://anim/run/tile017.png" id="68_w5j5w"]
[ext_resource type="Texture2D" uid="uid://bd75fvbwn1yxg" path="res://anim/run/tile018.png" id="69_cbf1i"]
[ext_resource type="Texture2D" uid="uid://c74gn53yaoxv2" path="res://anim/run/tile019.png" id="70_4vfid"]
[ext_resource type="Texture2D" uid="uid://y3ghqw5m8wca" path="res://anim/run/tile020.png" id="71_ljgr3"]
[ext_resource type="Texture2D" uid="uid://be3886rfk80vq" path="res://anim/run/tile021.png" id="72_fr8ja"]
[ext_resource type="Texture2D" uid="uid://bia2c4mx3w8y3" path="res://anim/run/tile022.png" id="73_gvmy4"]
[ext_resource type="Texture2D" uid="uid://da4xgxco0v7v7" path="res://anim/run/tile023.png" id="74_fcu33"]
[ext_resource type="PackedScene" uid="uid://c0btjaqcspd00" path="res://scenes/attacks/killAura.tscn" id="75_mwp2n"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_u8vuu"]
radius = 0.0861542
height = 0.238501

[sub_resource type="BoxShape3D" id="BoxShape3D_qjsmb"]
size = Vector3(100, 0, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_g2els"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_giy8y")
}, {
"duration": 1.0,
"texture": ExtResource("4_fdfoy")
}, {
"duration": 1.0,
"texture": ExtResource("5_hhpqf")
}, {
"duration": 1.0,
"texture": ExtResource("6_g5jhy")
}, {
"duration": 1.0,
"texture": ExtResource("7_holxr")
}, {
"duration": 1.0,
"texture": ExtResource("8_mx1m4")
}, {
"duration": 1.0,
"texture": ExtResource("9_4gjji")
}, {
"duration": 1.0,
"texture": ExtResource("10_u2ulf")
}, {
"duration": 1.0,
"texture": ExtResource("11_6e8lb")
}, {
"duration": 1.0,
"texture": ExtResource("12_2gdjj")
}, {
"duration": 1.0,
"texture": ExtResource("13_sc3ue")
}, {
"duration": 1.0,
"texture": ExtResource("14_lxlsd")
}],
"loop": true,
"name": &"idle_facing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("39_qk6i7")
}, {
"duration": 1.0,
"texture": ExtResource("40_6c3st")
}, {
"duration": 1.0,
"texture": ExtResource("41_1da1t")
}, {
"duration": 1.0,
"texture": ExtResource("42_p21yu")
}],
"loop": true,
"name": &"idle_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_ha2mi")
}, {
"duration": 1.0,
"texture": ExtResource("16_apa73")
}, {
"duration": 1.0,
"texture": ExtResource("17_74r1k")
}, {
"duration": 1.0,
"texture": ExtResource("18_8svfe")
}, {
"duration": 1.0,
"texture": ExtResource("19_2a3c5")
}, {
"duration": 1.0,
"texture": ExtResource("20_42b1b")
}, {
"duration": 1.0,
"texture": ExtResource("21_h7ic4")
}, {
"duration": 1.0,
"texture": ExtResource("22_au7lq")
}, {
"duration": 1.0,
"texture": ExtResource("23_nubpm")
}, {
"duration": 1.0,
"texture": ExtResource("24_ua5cf")
}, {
"duration": 1.0,
"texture": ExtResource("25_51ujp")
}, {
"duration": 1.0,
"texture": ExtResource("26_tk41t")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("27_fuw3a")
}, {
"duration": 1.0,
"texture": ExtResource("28_8txt3")
}, {
"duration": 1.0,
"texture": ExtResource("29_2w11d")
}, {
"duration": 1.0,
"texture": ExtResource("30_770dr")
}, {
"duration": 1.0,
"texture": ExtResource("31_8f1cb")
}, {
"duration": 1.0,
"texture": ExtResource("32_vdulj")
}, {
"duration": 1.0,
"texture": ExtResource("33_vau08")
}, {
"duration": 1.0,
"texture": ExtResource("34_qsb7e")
}, {
"duration": 1.0,
"texture": ExtResource("35_qjsmb")
}, {
"duration": 1.0,
"texture": ExtResource("36_mwp2n")
}, {
"duration": 1.0,
"texture": ExtResource("37_0yhus")
}, {
"duration": 1.0,
"texture": ExtResource("38_jlll7")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("43_sc3ue")
}, {
"duration": 1.0,
"texture": ExtResource("44_lxlsd")
}, {
"duration": 1.0,
"texture": ExtResource("45_ha2mi")
}, {
"duration": 1.0,
"texture": ExtResource("46_apa73")
}, {
"duration": 1.0,
"texture": ExtResource("47_74r1k")
}, {
"duration": 1.0,
"texture": ExtResource("48_8svfe")
}, {
"duration": 1.0,
"texture": ExtResource("49_2a3c5")
}, {
"duration": 1.0,
"texture": ExtResource("50_42b1b")
}],
"loop": true,
"name": &"run_facing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("51_qjsmb")
}, {
"duration": 1.0,
"texture": ExtResource("52_mwp2n")
}, {
"duration": 1.0,
"texture": ExtResource("53_0yhus")
}, {
"duration": 1.0,
"texture": ExtResource("54_jlll7")
}, {
"duration": 1.0,
"texture": ExtResource("55_qk6i7")
}, {
"duration": 1.0,
"texture": ExtResource("56_6c3st")
}, {
"duration": 1.0,
"texture": ExtResource("57_1da1t")
}, {
"duration": 1.0,
"texture": ExtResource("58_p21yu")
}],
"loop": true,
"name": &"run_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("51_h7ic4")
}, {
"duration": 1.0,
"texture": ExtResource("52_au7lq")
}, {
"duration": 1.0,
"texture": ExtResource("61_irpag")
}, {
"duration": 1.0,
"texture": ExtResource("62_bpsgo")
}, {
"duration": 1.0,
"texture": ExtResource("63_jx8is")
}, {
"duration": 1.0,
"texture": ExtResource("64_vx63k")
}, {
"duration": 1.0,
"texture": ExtResource("65_lw0jh")
}, {
"duration": 1.0,
"texture": ExtResource("66_ry8ed")
}],
"loop": true,
"name": &"run_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("67_au8ao")
}, {
"duration": 1.0,
"texture": ExtResource("68_w5j5w")
}, {
"duration": 1.0,
"texture": ExtResource("69_cbf1i")
}, {
"duration": 1.0,
"texture": ExtResource("70_4vfid")
}, {
"duration": 1.0,
"texture": ExtResource("71_ljgr3")
}, {
"duration": 1.0,
"texture": ExtResource("72_fr8ja")
}, {
"duration": 1.0,
"texture": ExtResource("73_gvmy4")
}, {
"duration": 1.0,
"texture": ExtResource("74_fcu33")
}],
"loop": true,
"name": &"run_right",
"speed": 5.0
}]

[node name="Player" type="CharacterBody3D" groups=["Player"]]
script = ExtResource("1_g2els")

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="."]
visible = false
material_override = ExtResource("1_3vyb7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_u8vuu")

[node name="KillAura" parent="CollisionShape3D" instance=ExtResource("75_mwp2n")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0604463, 0)

[node name="Area3D" type="Area3D" parent="CollisionShape3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CollisionShape3D/Area3D" groups=["PlayerStats"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00913364, 0)
shape = SubResource("BoxShape3D_qjsmb")

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
billboard = 1
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_g2els")
animation = &"run_front"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Timer2" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="CollisionShape3D/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="CollisionShape3D/Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
